# openwire

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  live-network.yml
crates/openwire/: Cargo.toml
crates/openwire-cache/: Cargo.toml
crates/openwire-cache/src/: lib.rs
crates/openwire-cache/tests/: integration.rs
crates/openwire-core/: Cargo.toml
crates/openwire-core/src/: auth.rs  body.rs  context.rs  cookie.rs  error.rs  event.rs  interceptor.rs  lib.rs  policy.rs  runtime.rs  tokio_rt.rs  transport.rs
crates/openwire-core/src/websocket/: engine.rs  error.rs  handshake_info.rs  message.rs  mod.rs
crates/openwire-fastwebsockets/: Cargo.toml
crates/openwire-fastwebsockets/src/: lib.rs
crates/openwire-fastwebsockets/tests/: integration.rs
crates/openwire-rustls/: Cargo.toml
crates/openwire-rustls/src/: lib.rs
crates/openwire-test/: Cargo.toml
crates/openwire-test/src/: lib.rs
crates/openwire-tokio/: Cargo.toml
crates/openwire-tokio/src/: lib.rs
crates/openwire-tungstenite/: Cargo.toml
crates/openwire-tungstenite/src/: lib.rs
crates/openwire-tungstenite/tests/: integration.rs
crates/openwire/benches/: perf_baseline.rs
crates/openwire/examples/: authenticator.rs  basic_get.rs  cookie_jar.rs  custom_dns.rs  event_listener_tracing.rs  https_proxy.rs  logging_interceptor.rs  post_streaming_body.rs  websocket_echo.rs  websocket_subprotocol.rs
crates/openwire/src/: auth.rs  bridge.rs  client.rs  cookie.rs  lib.rs  logging.rs  proxy.rs  request_builder.rs  sync_util.rs  trace.rs  transport.rs
crates/openwire/src/connection/: exchange_finder.rs  fast_fallback.rs  limits.rs  mod.rs  planning.rs  pool.rs  real_connection.rs
crates/openwire/src/policy/: defaults.rs  follow_up.rs  mod.rs
crates/openwire/src/transport/: bindings.rs  body.rs  connect.rs  mod.rs  protocol.rs  service.rs  tests.rs
crates/openwire/src/websocket/: handshake.rs  instrumented.rs  mod.rs  public.rs  transport.rs  writer.rs
crates/openwire/src/websocket/native/: codec.rs  engine.rs  mask.rs  mod.rs  session.rs
crates/openwire/tests/: integration.rs  live_network.rs  performance_baseline.rs  websocket.rs
crates/openwire/tests/support/: mod.rs
docs/: ARCHITECTURE.md  DESIGN.md  REVIEW_REMEDIATION_DESIGN.md  REVIEW_REMEDIATION_TASKS.md  authenticator-contract.md  cache-contract.md  component-strategy.md  cookiejar-contract.md  core-review.md  error-handling-roadmap.md  implementation-plan.md  live-network-follow-ups.md  policy-interface-design.md  proxy-contract.md  remove-hyper-util-dependency-plan.md  roadmap.md  subsystem-survey.md  tasks.md  trait-oriented-redesign.md  transport-core-connection-establishment-fixes.md  websocket-design.md  websocket-implementation-plan.md
docs/plans/: core-review-plan-spec.md  transport-module-split.md
docs/plans/2026-03-23-connection-followups/: ws-01-shared-connect-budget.md  ws-02-pool-reaper-and-index.md  ws-03-address-extension-cache.md  ws-04-tokio-sync-primitives.md
