[workspace]
members = [
    "crates/openwire",
    "crates/openwire-cache",
    "crates/openwire-core",
    "crates/openwire-tokio",
    "crates/openwire-rustls",
    "crates/openwire-test",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["OpenWire contributors"]
repository = "https://github.com/peterich-rs/openwire"
rust-version = "1.80"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22"
bytes = "1.10.1"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
getrandom = "0.2"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
pin-project-lite = "0.2.16"
rcgen = "0.14.5"
rustls = "0.23.35"
rustls-webpki = "0.103.10"
rustls-native-certs = "0.8.2"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tower = { version = "0.5.3", features = ["timeout", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
