[package]
name = "openwire-core"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
pin-project-lite.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
