[package]
name = "openwire-fastwebsockets"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
fastwebsockets.workspace = true
futures-util = { workspace = true, features = ["sink"] }
openwire-core = { path = "../openwire-core", features = ["websocket"] }
openwire-tokio = { path = "../openwire-tokio" }
tokio.workspace = true

[dev-dependencies]
http.workspace = true
openwire = { path = "../openwire", features = ["websocket"] }
openwire-test = { path = "../openwire-test", features = ["websocket"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.24"