[package]
name = "openwire-test"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
openwire-core = { path = "../openwire-core" }
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

