[package]
name = "openwire-test"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
websocket = ["dep:tokio-tungstenite"]

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
openwire-core = { path = "../openwire-core" }
openwire-tokio = { path = "../openwire-tokio" }
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite = { version = "0.24", optional = true }
tracing.workspace = true
