[package]
name = "openwire-tokio"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyper.workspace = true
openwire-core = { path = "../openwire-core" }
pin-project-lite.workspace = true
tokio.workspace = true
tracing.workspace = true
