[package]
name = "openwire"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["tls-rustls", "platform-verifier"]
tls-rustls = ["dep:openwire-rustls"]
platform-verifier = ["tls-rustls", "openwire-rustls/platform-verifier"]
json = ["openwire-core/json"]
websocket = ["openwire-core/websocket", "dep:sha1", "dep:getrandom"]

[dependencies]
base64.workspace = true
bytes.workspace = true
cookie = "0.18.0"
cookie_store = { version = "0.21.1", default-features = false, features = ["public_suffix"] }
futures-channel.workspace = true
futures-util = { workspace = true, features = ["io"] }
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
openwire-core = { path = "../openwire-core" }
openwire-tokio = { path = "../openwire-tokio" }
getrandom = { workspace = true, optional = true }
openwire-rustls = { path = "../openwire-rustls", optional = true, default-features = false }
pin-project-lite.workspace = true
sha1 = { workspace = true, optional = true }
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
futures-util = { workspace = true, features = ["sink"] }
openwire-test = { path = "../openwire-test", features = ["websocket"] }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.24"
tracing-subscriber.workspace = true

[[bench]]
name = "perf_baseline"
harness = false
